syntax = "proto3";

package governance;

service Governor {
  rpc CheckPolicy (PolicyRequest) returns (PolicyResponse);
}

message PolicyRequest {
  string service_name = 1;
  string action = 2;
  string payload = 3; // JSON encoded context
}

message PolicyResponse {
  bool allowed = 1;
  string reason = 2;
}
